# biggie-backend

./: .gitignore  CMakeLists.txt  README.md
libs/hiredis/adapters/: libuv.h
src/: main.cpp
src/packets/client/: Packets.fbs  Packets_generated.h
src/packets/handler/: handler.cpp  handler.hpp
src/packets/server/: Packets.fbs  Packets_generated.h
src/socket/: server.cpp  server.hpp
src/utils/logger/: logger.cpp  logger.hpp
